--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,17 @@ extra-source-files:
 synopsis:            My site built with slick!
 category:            Slick-Site
 
+ghc-options:
+  - -Wall
+  - -Wcompat
+  - -Widentities
+  - -Wincomplete-record-updates
+  - -Wincomplete-uni-patterns
+  - -Wmissing-home-modules
+  - -Wpartial-fields
+  - -Wredundant-constraints
+  - -Wtabs
+
 description: My slick Site
 
 executables:
